deployment/minio.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
    - protocol: TCP
      port: 9000
  selector:
    app: minio
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          ports:
            - containerPort: 9000
          args: ['server', '/data']
          volumeMounts:
            - name: minio-persistent-storage
              mountPath: /data
      volumes:
        - name: minio-persistent-storage
          persistentVolumeClaim:
            claimName: minio-pv-claim
