deployment/nestjs-server.yml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-server-service
spec:
  selector:
    app: nestjs-server
  ports:
    - protocol: TCP
      port: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-server-deployment
  labels:
    app: nestjs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestjs-server
  template:
    metadata:
      labels:
        app: nestjs-server
    spec:
      containers:
        - name: nestjs-server
          image: jordansimsmith/test-sanctuary-nestjs-server:latest
          ports:
            - containerPort: 5000
