deployment/nextjs-client.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-client-service
spec:
  selector:
    app: nextjs-client
  ports:
    - protocol: TCP
      port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-client-deployment
  labels:
    app: nextjs-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs-client
  template:
    metadata:
      labels:
        app: nextjs-client
    spec:
      containers:
        - name: nextjs-client
          image: jordansimsmith/test-sanctuary-nextjs-client:latest
          ports:
            - containerPort: 3000
