deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-client-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /graphql
spec:
  rules:
    - http:
        paths:
          - path: /api/graphql
            pathType: Prefix
            backend:
              service:
                name: nestjs-server-service
                port:
                  number: 5000
